--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is designed to run in a Python environment with the following dependencies: \n",
+    "\n",
+    "TensorFlow 1.15.2 \n",
+    "\n",
+    "It is recommended to create a dedicated Conda environment for this notebook using the following command: conda create --name tf115 python=3.x tensorflow=1.15.2\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
